# OSM-S-BKI

./: .gitignore
cpp/osm_bki/: CMakeLists.txt  README.md
cpp/osm_bki/configs/: kitti_config.yaml  mcd_config.yaml  osm_config.yaml
cpp/osm_bki/examples/: test_cbki.cpp
cpp/osm_bki/include/: continuous_bki.hpp  file_io.hpp  osm_xml_parser.hpp  yaml_parser.hpp
cpp/osm_bki/src/: continuous_bki.cpp  file_io.cpp  osm_parser.cpp
cpp/osm_sbki/: CMakeLists.txt
cpp/osm_sbki/configs/: mcd_config.yaml  osm_config.yaml
cpp/osm_sbki/examples/: visualize_map_osm.cpp
cpp/osm_sbki/include/: dataset_utils.hpp  osm_parser.hpp
cpp/osm_sbki/src/: dataset_utils.cpp  osm_parser.cpp
example_data/: hhs_calib.yaml
example_data/mcd/: kth.osm
example_data/mcd-data-kth/: download_kth_osm.sh  kth_campus_aligned.osm
python/: README.md  environment.yml  requirements.txt  setup.py
python/benchmarks/: benchmark_utils.py  calibration_benchmark.py  forgetting_benchmark.py  kernel_ablation_benchmark.py  multi_scan_benchmark.py  noise_benchmark.py  osm_modes_benchmark.py  osm_randomization_benchmark.py  parameter_sensitivity_benchmark.py  per_class_iou_benchmark.py  plot_results.ipynb  pred_vs_gt_benchmark.py  temporal_consistency_benchmark.py  throughput_benchmark.py
python/configs/: mcd_config.yaml
python/osm_bki/: __init__.py
python/osm_bki/pybind/: osm_bki_bindings.cpp
python/scripts/: basic_usage.py  build_voxel_map.py  compare_osm.py  continuous_map_train_test.py  continuous_mapping_example.py  convert_bki_to_bin_label.py  convert_kitti_to_mcd.py  convert_osm_xml_to_bin.py  copy_kth_data.py  debug_labels.py  learn_confusion_matrix.py  visualize_bki.py  visualize_labels.py  visualize_osm.py  visualize_osm_xml.py  visualize_voxel_map.py
